--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,8 +8,9 @@
             "name": "(gdb) Launch",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/ex00/btc",
-            "args": ["${workspaceFolder}/ex00/input.txt"],
+            "program": "${workspaceFolder}/ex02/PmergeMe",
+            "args": ["1", "2", "3", "4", "5", "6"],
+            //"args": ["16", "15", "19", "20", "10", "18", "5", "13", "11", "12", "2", "8", "3", "14", "17", "7", "4", "9", "6", "1"],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
             "environment": [],
