--- a/ex02/Makefile
+++ b/ex02/Makefile
@@ -4,7 +4,7 @@ DIR_BUILD		=	./build
 SOURCES			=	PmergeMe.cpp main.cpp 
 SOURCES_NAME	=	$(basename $(SOURCES))
 OBJECTS			=	$(addsuffix .o, $(addprefix $(DIR_BUILD)/, $(SOURCES_NAME)))
-CFLAGS			=	-Wall -Wextra -Werror -std=c++98 -g
+CFLAGS			=	-Wall -Wextra -Werror -g -std=c++11
 LDINCLUDE		=	-I$(DIR_SRC)
 LDFLAGS			=
 LDLIBS			=
